# coap2seis

./: README.md  pyproject.toml  requirements.txt
coap2seis/: __init__.py  __main__.py  bridge.py  buffer.py  coap_server.py  config.py  earthworm.py  miniseed_writer.py  payload.py  writer.py
config/: coap2seis.yaml.example
systemd/: coap2seis.service
tests/: conftest.py  test_buffer.py  test_config.py  test_earthworm.py  test_payload.py
